--- a/apps/block_scout_web/lib/block_scout_web/templates/layout/_topnav.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/layout/_topnav.html.eex
@@ -82,32 +82,30 @@
                   ) %>
             </div>
           </li>
-        <% end %>
-        <%= if Application.get_env(:block_scout_web, BlockScoutWeb.ApiRouter)[:reading_enabled] || Application.get_env(:block_scout_web, :api_url) do %>
           <li class="nav-item dropdown">
-            <a href="#" role="button" id="navbarAPIsDropdown" class="nav-link topnav-nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <span class="nav-link-icon">
-                <%= render BlockScoutWeb.IconsView, "_api_icon.html" %>
-              </span>
-              <%= gettext("APIs") %>
-            </a>
-            <div class="dropdown-menu" aria-labeledby="navbarTransactionsDropdown"> 
-              <%= link(
-                    gettext("GraphQL"),
-                    class: "dropdown-item #{tab_status("graphiql", @conn.request_path)}",
-                    to: api_url() <> "/graphiql"
+              <a href="#" role="button" id="navbarTokensDropdown" class="nav-link topnav-nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="nav-link-icon">
+                  <%= render BlockScoutWeb.IconsView, "_tokens_icon.html" %>
+                </span>
+                Contracts
+              </a>
+              <div class="dropdown-menu" aria-labeledby="navbarTransactionsDropdown">
+                  <%= link(
+                    gettext("DID Registry"),
+                    class: "dropdown-item #{tab_status("tokens", @conn.request_path)}",
+                    to: tokens_path(@conn, :index)
                   ) %>
-              <%= link(
-                    gettext("RPC"),
-                    class: "dropdown-item #{tab_status("api-docs", @conn.request_path)}",
-                    to: api_url() <> api_docs_path(@conn, :index)
+                  <%= link(
+                    gettext("Public Key Directory"),
+                    class: "dropdown-item #{tab_status("accounts", @conn.request_path)}",
+                    to: address_path(@conn, :index)
                   ) %>
-              <%= link(
-                    gettext("Eth RPC"),
-                    class: "dropdown-item #{tab_status("eth-rpc-api-docs", @conn.request_path)}",
-                    to: api_url() <> api_docs_path(@conn, :eth_rpc)
+                  <%= link(
+                    gettext("Credentials Registry"),
+                    class: "dropdown-item #{tab_status("accounts", @conn.request_path)}",
+                    to: address_path(@conn, :index)
                   ) %>
-            </div>
+              </div>
           </li>
         <% end %>
         <%= if apps_menu == true do %>
@@ -149,10 +147,6 @@
             <% end %> 
             <a class="dropdown-item header division">Testnets</a> 
             <%= for %{url: url, title: title} <- test_nets(dropdown_nets()) do %> 
-              <a class="dropdown-item" href="<%= url %>"><%= title %></a>
-            <% end %> 
-            <a class="dropdown-item header division">Other Networks</a> 
-            <%= for %{url: url, title: title} <- dropdown_other_nets() do %>  
               <a class="dropdown-item" href="<%= url %>"><%= title %></a>
             <% end %> 
           </div>
