--- a/apps/block_scout_web/lib/block_scout_web/templates/layout/_footer.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/layout/_footer.html.eex
@@ -6,7 +6,8 @@
         <%= link to: webapp_url(@conn), class: "footer-brand" do %>
           <%= if logo_footer() do %>
             <img class="footer-logo" src="<%= static_path(@conn, logo_footer()) %>" alt="<%= subnetwork_title() %>" />
-          <% end %>
+            <img class="footer-logo" src="/images/lac-net.png" alt="LAC-NET" />
+        <% end %>
           <%= if logo_text() do %>
             <span class="logo-text in-footer <%= unless logo_footer(), do: "no-logo" %>"> <%= logo_text() %> </span>
           <% end %>
@@ -19,7 +20,7 @@
 
     <div class="row">
       <div class="col-xs-12 col-lg-3">
-        <p class="footer-info-text"><%= gettext("Blockscout is a tool for inspecting and analyzing EVM based blockchains. Blockchain explorer for Ethereum Networks.") %></p>
+        <p class="footer-info-text"><%= gettext("Blockscout is a tool for inspecting and analyzing EVM based blockchains. Blockchain explorer for Ethereum Networks. LACNet is using the Blockscout tool to provide open dashboards for the LACChain Networks.") %></p>
         <div class="footer-social-icons">
           <a href="<%= Application.get_env(:block_scout_web, :footer)[:github_link] %>" rel="noreferrer" target="_blank" class="footer-social-icon" title='<%= gettext("Github") %>'>
             <div class="footer-social-icon-container fontawesome-icon github"></div>
@@ -43,6 +44,15 @@
           <%= if System.get_env("COIN_NAME") && System.get_env("NETWORK_PATH") && System.get_env("SUBNETWORK") && System.get_env("JSON_RPC") && System.get_env("CHAIN_ID") do %>
             <li><a class="footer-link js-btn-add-chain-to-mm btn-add-chain-to-mm in-footer" style="cursor: pointer;"><%= gettext("Add") <> " #{System.get_env("SUBNETWORK")}" %></a></li>
           <% end %>
+        </ul>
+      </div>
+      <div class="col-xs-12 col-md-4 col-lg-<%= col_size %> footer-list">
+        <h3>LAC-NET</h3>
+        <ul>
+          <li><a href="https://lacnet.lacchain.net/customer-and-support-portal" rel="noreferrer" class="footer-link" target="_blank"><%= gettext("Open a ticket ") %></a></li>
+          <li><a href="https://github.com/LACNetNetworks/besu-networks/issues" rel="noreferrer" class="footer-link"><%= gettext("Submit an issue") %></a></li>
+          <li><a href="https://lacnet.lacchain.net/documentation" rel="noreferrer" class="footer-link"><%= gettext("Check documentation") %></a></li>
+          <li><a href="https://lac-net.lacchain.net" rel="noreferrer" class="footer-link"><%= gettext("Customer and Support Portal") %></a></li>
         </ul>
       </div>
       <% main_nets = main_nets(other_networks()) %>
