--- a/apps/block_scout_web/assets/css/components/_footer.scss
+++ b/apps/block_scout_web/assets/css/components/_footer.scss
@@ -72,6 +72,7 @@ $footer-logo-width: auto !default;
 
 .footer-list {
   padding-top: 0;
+  padding-left: 100px;
 
   h3 {
     color: $footer-title-color;
