--- a/apps/block_scout_web/lib/block_scout_web/templates/layout/_topnav.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/layout/_topnav.html.eex
@@ -1,5 +1,5 @@
 <% apps_menu = Application.get_env(:block_scout_web, :apps_menu) %>
-<% did_registry = Application.get_env(:block_scout_web, :did_registry) %>
+<% did_registry_url = Application.get_env(:block_scout_web, :did_registry_url) %>
 <nav class="navbar navbar-dark navbar-expand-lg navbar-primary" data-selector="navbar" id="top-navbar">
   <div class="container-fluid navbar-container">
     <%= link to: webapp_url(@conn), class: "navbar-brand", "data-test": "header_logo" do %>
@@ -94,7 +94,7 @@
                   <%= link(
                     gettext("DID Registry"),
                     class: "dropdown-item #{tab_status("tokens", @conn.request_path)}",
-                    to: did_registry
+                    to: did_registry_url
                   ) %>
                   <%= link(
                     gettext("Public Key Directory"),
